Fixing CSS to fit on mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ h2 {
     position: relative;
     width: max-content;
     color: var(--whiteG);
-    text-shadow: ;
+    text-shadow: var(--shadow);
 }
 
 .card_title::after {
